--- a/module-4/index.html
+++ b/module-4/index.html
@@ -24,6 +24,8 @@
             <li><a href="module-2/ilewis_Mod1_3.html">Assignment 1.3</a></li>
             <li><a href="module-2/ilewis_Mod2_2.html">Assignment 2.2</a></li>
             <li><a href="module-3/ilewis_Mod3_2.html">Assignment 3.2</a></li>
+            <li><a href="module-4/ilewis_Mod4_2.html">Assignment 4.2</a></li>
+            <li><a href="module-6/ilewis_Mod6_2.html">Assignment 6.2</a></li>
         </ul>
         
         <h3>Projects</h3>
